// Database schema for Fintrack application
// Compatible with SQLite

Table users {
  id UUID [pk]
  email String [unique, not null]
  name String
  created_at DateTime [default: `CURRENT_TIMESTAMP`]
  updated_at DateTime [default: `CURRENT_TIMESTAMP`]
}

Table transactions {
  id UUID [pk]
  user_id UUID [ref: > users.id]
  date DateTime [not null]
  description String [not null]
  amount Decimal [not null]
  category_id UUID [ref: > categories.id]
  type TransactionType [not null]
  attachment_url String
  created_at DateTime [default: `CURRENT_TIMESTAMP`]
  updated_at DateTime [default: `CURRENT_TIMESTAMP`]
}

Table categories {
  id UUID [pk]
  user_id UUID [ref: > users.id]
  name String [not null]
  type CategoryType [not null]
  is_custom Boolean [not null, default: false]
  icon String
  created_at DateTime [default: `CURRENT_TIMESTAMP`]
  updated_at DateTime [default: `CURRENT_TIMESTAMP`]

  indexes {
    (user_id, name, type) [unique]
  }
}

Table tags {
  id UUID [pk]
  name String [not null]
  user_id UUID [ref: > users.id]
  created_at DateTime [default: `CURRENT_TIMESTAMP`]

  indexes {
    (user_id, name) [unique]
  }
}

Table transaction_tags {
  transaction_id UUID [ref: > transactions.id]
  tag_id UUID [ref: > tags.id]

  indexes {
    (transaction_id, tag_id) [pk]
  }
}

// Settings table for user preferences like theme, language, etc.
Table user_settings {
  id UUID [pk]
  user_id UUID [unique, ref: > users.id]
  theme String [default: 'light']
  language String [default: 'en']
  created_at DateTime [default: `CURRENT_TIMESTAMP`]
  updated_at DateTime [default: `CURRENT_TIMESTAMP`]
}

// AI insights table to store generated insights
Table financial_insights {
  id UUID [pk]
  user_id UUID [ref: > users.id]
  insights Text [not null]
  period_start DateTime [not null]
  period_end DateTime [not null]
  created_at DateTime [default: `CURRENT_TIMESTAMP`]
}

// Room Management Tables
Table rooms {
  id UUID [pk]
  name String [not null]
  description String
  capacity Integer [not null]
  status RoomStatus [not null, default: 'available']
  location String
  created_at DateTime [default: `CURRENT_TIMESTAMP`]
  updated_at DateTime [default: `CURRENT_TIMESTAMP`]
}

Table facilities {
  id UUID [pk]
  name String [not null, unique]
  description String
  icon String
  created_at DateTime [default: `CURRENT_TIMESTAMP`]
}

Table room_facilities {
  room_id UUID [ref: > rooms.id]
  facility_id UUID [ref: > facilities.id]
  
  indexes {
    (room_id, facility_id) [pk]
  }
}

Table bookings {
  id UUID [pk]
  user_id UUID [ref: > users.id]
  room_id UUID [ref: > rooms.id]
  start_time DateTime [not null]
  end_time DateTime [not null]
  purpose String [not null]
  status BookingStatus [not null, default: 'pending']
  created_at DateTime [default: `CURRENT_TIMESTAMP`]
  updated_at DateTime [default: `CURRENT_TIMESTAMP`]
}

// Enum definitions
Enum TransactionType {
  income
  expense
}

Enum CategoryType {
  income
  expense
  general
}

Enum RoomStatus {
  available
  booked
  maintenance
}

Enum BookingStatus {
  pending
  confirmed
  cancelled
  completed
}

// Relationships and notes
// - Users can have many transactions and categories
// - Transactions belong to a category
// - Transactions can have multiple tags through transaction_tags
// - Categories have a type (income, expense, or general)
// - User settings are 1:1 with users
// - Financial insights are generated for a user for a specific period
// - Rooms can have multiple facilities through room_facilities
// - Users can have multiple bookings
// - Each booking belongs to one user and one room
// - Room status automatically updates based on active bookings
// - Business rule: One user can only have one confirmed booking at a time
